# ghc-plugin-template

./: .gitignore  ghc-plugin-template.cabal  rename.sh
GhcPlugins/: Template.hs
GhcPlugins/Template/: Annotation.hs  Pass.hs
tests/: Makefile  SampleTest  SampleTest.hs
