name:                ghc-plugin-template
version:             0.0.1
synopsis:            Template for writing GHC plugins
description:
  This plugin gives an example of defining a compiler plugin for
  GHC. You mark functions with the `Strictify` annotation and GHC
  makes the function strict (by recursively expanding non-recursive
  let bindings into case bindings.)
license:             PublicDomain
author:              Edward Z. Yang <ezyang@mit.edu>
maintainer:          Edward Z. Yang <ezyang@mit.edu>
category:            Compiler Plugin
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.4.3

library
  exposed-modules:
    GhcPlugins.Template
    GhcPlugins.Template.Annotation
  other-modules:
    GhcPlugins.Template.Pass
  build-depends:
    base < 5,
    ghc >= 7.4,
    syb

  default-extensions: CPP
  default-language:   Haskell2010
